# wibot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: main.rs
