[package]
name = "wibot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "chrono"] }
anyhow = "1.0.79"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dotenv = "0.15.0"
teloxide = { version = "0.13.0", features = ["macros"] }
thiserror = "2.0.3"

[dev-dependencies]
tokio-test = "0.4.4"
